force-app/main/default/objects/RE_Bio_Quotes__c/RE_Bio_Quotes__c.object-meta.xml
<CustomObject>
    <label>RE Bio Quotes</label>
    <nameField>
        <displayFormat>BioQuote-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RE Bio Quotes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>