force-app/main/default/objects/RE_Bio_Quotes__c/fields/RE_Bio_Quotes_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Bio_Quotes_Name__c</fullName>
    <label>Bio Quotes Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>