force-app/main/default/objects/RE_Bio_Quotes__c/fields/RE_Bio_RateUnit__c.field-meta.xml
<CustomField>
    <fullName>RE_Bio_RateUnit__c</fullName>
    <label>Rate Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RE_Rate_Unit_Set</valueSetName>
    </valueSet>
</CustomField>