force-app/main/default/objects/RE_Bio_Quotes__c/fields/RE_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_Price__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>