force-app/main/default/objects/RE_Bio_Quotes__c/fields/RE_Pricing_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_Pricing_Date__c</fullName>
    <label>Pricing Date</label>
    <type>Date</type>
</CustomField>