force-app/main/default/objects/RE_Bio_Quotes__c/fields/RE_Publisher__c.field-meta.xml
<CustomField>
    <fullName>RE_Publisher__c</fullName>
    <label>Publisher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>