force-app/main/default/objects/RE_Bio_Quotes__c/fields/RE_Region__c.field-meta.xml
<CustomField>
    <fullName>RE_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Peninsular</fullName>
            </value>
            <value>
                <fullName>Sabah</fullName>
            </value>
            <value>
                <fullName>Sarawak</fullName>
            </value>
            <value>
                <fullName>Pandan</fullName>
            </value>
            <value>
                <fullName>Thailand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>