force-app/main/default/objects/RE_Bio_Quotes__c/recordTypes/Singapore.recordType-meta.xml
<RecordType>
    <fullName>Singapore</fullName>
    <active>false</active>
    <label>Singapore</label>
</RecordType>