force-app/main/default/objects/RE_Bio_Quotes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RE_Bio_Quotes_Name__c</columns>
    <columns>RE_Price__c</columns>
    <columns>RE_Bio_RateUnit__c</columns>
    <columns>RE_Region__c</columns>
    <columns>RE_Pricing_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>