force-app/main/default/objects/RE_Bio_Quotes__c/listViews/Malaysia.listView-meta.xml
<ListView>
    <fullName>Malaysia</fullName>
    <columns>NAME</columns>
    <columns>RE_Bio_Quotes_Name__c</columns>
    <columns>RE_Price__c</columns>
    <columns>RE_Bio_RateUnit__c</columns>
    <columns>RE_Region__c</columns>
    <columns>RE_Pricing_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Bio_Quotes__c.Malaysia</value>
    </filters>
    <label>Malaysia</label>
    <sharedTo>
        <territoryAndSubordinates>Revolution_Territory.Malaysia</territoryAndSubordinates>
    </sharedTo>
</ListView>