force-app/main/default/objects/RE_Bio_Quotes__c/listViews/Thailand.listView-meta.xml
<ListView>
    <fullName>Thailand</fullName>
    <columns>NAME</columns>
    <columns>RE_Country__c</columns>
    <columns>RE_Price__c</columns>
    <columns>RE_Bio_RateUnit__c</columns>
    <columns>RE_Pricing_Date__c</columns>
    <columns>RE_Bio_Quotes_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Bio_Quotes__c.Thailand</value>
    </filters>
    <label>Thailand</label>
</ListView>